--- a/xenophormic_website (3).html
+++ b/xenophormic_website (3).html
@@ -478,6 +478,86 @@
         </div>
     </section>
 
+    <section id="milestones" class="section fade-in">
+        <h2>Our Journey</h2>
+        <div style="max-width: 800px; margin: 0 auto; position: relative;">
+            <!-- Timeline line -->
+            <div style="position: absolute; left: 50%; top: 0; bottom: 0; width: 2px; background: rgba(255,255,255,0.2); transform: translateX(-50%);"></div>
+            
+            <!-- Timeline items -->
+            <div style="display: flex; flex-direction: column; gap: 3rem; position: relative;">
+                <!-- Milestone 1 -->
+                <div style="display: flex; align-items: center; gap: 2rem;">
+                    <div style="flex: 1; text-align: right; opacity: 0.4;">
+                        <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Pre-seed Planning Phase</h4>
+                        <p style="font-size: 0.9rem; opacity: 0.7;">Strategic roadmap and business model development</p>
+                    </div>
+                    <div style="width: 20px; height: 20px; border: 2px solid rgba(255,255,255,0.3); border-radius: 50%; background: black; z-index: 10; flex-shrink: 0;"></div>
+                    <div style="flex: 1; opacity: 0.4;">
+                        <p style="font-size: 0.85rem; opacity: 0.6;">Q4 2025</p>
+                    </div>
+                </div>
+
+                <!-- Milestone 2 -->
+                <div style="display: flex; align-items: center; gap: 2rem;">
+                    <div style="flex: 1; text-align: right; opacity: 0.4;">
+                        <p style="font-size: 0.85rem; opacity: 0.6;">Q4 2025</p>
+                    </div>
+                    <div style="width: 20px; height: 20px; border: 2px solid rgba(255,255,255,0.3); border-radius: 50%; background: black; z-index: 10; flex-shrink: 0;"></div>
+                    <div style="flex: 1; opacity: 0.4;">
+                        <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem;">DGCA Compliance Research</h4>
+                        <p style="font-size: 0.9rem; opacity: 0.7;">Regulatory framework analysis and certification requirements</p>
+                    </div>
+                </div>
+
+                <!-- Milestone 3 -->
+                <div style="display: flex; align-items: center; gap: 2rem;">
+                    <div style="flex: 1; text-align: right; opacity: 0.4;">
+                        <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Partnership Discussions</h4>
+                        <p style="font-size: 0.9rem; opacity: 0.7;">Initiating conversations with major delivery platforms</p>
+                    </div>
+                    <div style="width: 20px; height: 20px; border: 2px solid rgba(255,255,255,0.3); border-radius: 50%; background: black; z-index: 10; flex-shrink: 0;"></div>
+                    <div style="flex: 1; opacity: 0.4;">
+                        <p style="font-size: 0.85rem; opacity: 0.6;">Q1 2026</p>
+                    </div>
+                </div>
+
+                <!-- Milestone 4 -->
+                <div style="display: flex; align-items: center; gap: 2rem;">
+                    <div style="flex: 1; text-align: right; opacity: 0.4;">
+                        <p style="font-size: 0.85rem; opacity: 0.6;">Q1 2026</p>
+                    </div>
+                    <div style="width: 20px; height: 20px; border: 2px solid rgba(255,255,255,0.3); border-radius: 50%; background: black; z-index: 10; flex-shrink: 0;"></div>
+                    <div style="flex: 1; opacity: 0.4;">
+                        <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Technical Feasibility Study</h4>
+                        <p style="font-size: 0.9rem; opacity: 0.7;">Hardware evaluation and autonomous systems architecture</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="getinvolved" class="section fade-in">
+        <h2>Get Involved</h2>
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-top: 3rem;">
+            <!-- Investor Deck -->
+            <div style="border: 1px solid rgba(255,255,255,0.2); padding: 2rem; text-align: center; transition: all 0.3s ease;">
+                <div style="font-size: 2.5rem; margin-bottom: 1rem;">📊</div>
+                <h3 style="margin-bottom: 1rem; font-weight: 300;">Investor Deck</h3>
+                <p style="opacity: 0.8; margin-bottom: 2rem;">Get detailed insights into our vision, market analysis, and growth strategy.</p>
+                <a href="mailto:nischaaayy@gmail.com?subject=Request%20for%20Cosmodrop%20Investor%20Deck&body=Hi%2C%0A%0AI'm%20interested%20in%20learning%20more%20about%20Cosmodrop.%20Please%20share%20your%20investor%20deck.%0A%0AName%3A%20%0AOrganization%3A%20%0AEmail%3A%20%0APhone%3A%20" style="display: inline-block; padding: 12px 30px; border: 2px solid white; color: white; text-decoration: none; text-transform: uppercase; letter-spacing: 1px; transition: all 0.3s ease;">Request Deck</a>
+            </div>
+
+            <!-- Partner Waitlist -->
+            <div style="border: 1px solid rgba(255,255,255,0.2); padding: 2rem; text-align: center; transition: all 0.3s ease;">
+                <div style="font-size: 2.5rem; margin-bottom: 1rem;">🤝</div>
+                <h3 style="margin-bottom: 1rem; font-weight: 300;">B2B Partnership</h3>
+                <p style="opacity: 0.8; margin-bottom: 2rem;">Join our early access program for delivery platforms and logistics partners.</p>
+                <a href="https://forms.gle/your-form-id" target="_blank" style="display: inline-block; padding: 12px 30px; border: 2px solid white; color: white; text-decoration: none; text-transform: uppercase; letter-spacing: 1px; transition: all 0.3s ease;">Join Waitlist</a>
+            </div>
+        </div>
+    </section>
+
     <section id="team" class="section fade-in">
         <h2>Leadership Team</h2>
         <div class="team-grid">
@@ -585,11 +665,12 @@
             observer.observe(el);
         });
 
-        // Contact form submission
+        // Contact form submission - Formspree handles this now
         document.querySelector('.contact-form').addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert('Thank you for your message! We will get back to you soon.');
-            this.reset();
+            // Formspree will handle the submission, just show a brief loading state
+            const button = this.querySelector('button');
+            button.textContent = 'Sending...';
+            button.disabled = true;
         });
 
         // Initialize stars
