--- a/index.html
+++ b/index.html
@@ -471,8 +471,10 @@
                     </div>
                 </div>
 
-                <div style="margin-top: 2rem; text-align: center;">
+                <div style="margin-top: 2rem; text-align: center; display: flex; gap: 1.5rem; justify-content: center; align-items: center; flex-wrap: wrap;">
                     <div class="portfolio-status">Launching Soon in Lucknow</div>
+                    <a href="https://investordeck.netlify.app/" class="cta-link" style="display: inline-block; padding: 10px 20px; border: 1px solid rgba(255,255,255,0.5); color: white; text-decoration: none; text-transform: uppercase; letter-spacing: 1px; font-size: 0.8rem; transition: all 0.3s ease;">📊 Request Deck</a>
+                    <a href="https://forms.gle/Roqbiw7hp1ceNePZ7" target="_blank" class="cta-link" style="display: inline-block; padding: 10px 20px; border: 1px solid rgba(255,255,255,0.5); color: white; text-decoration: none; text-transform: uppercase; letter-spacing: 1px; font-size: 0.8rem; transition: all 0.3s ease;">🤝 Join Waitlist</a>
                 </div>
             </div>
         </div>
@@ -533,27 +535,6 @@
                         <p style="font-size: 0.9rem; opacity: 0.7;">Hardware evaluation and autonomous systems architecture</p>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="getinvolved" class="section fade-in">
-        <h2>Get Involved</h2>
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-top: 3rem;">
-            <!-- Investor Deck -->
-            <div style="border: 1px solid rgba(255,255,255,0.2); padding: 2rem; text-align: center; transition: all 0.3s ease;">
-                <div style="font-size: 2.5rem; margin-bottom: 1rem;">📊</div>
-                <h3 style="margin-bottom: 1rem; font-weight: 300;">Investor Deck</h3>
-                <p style="opacity: 0.8; margin-bottom: 2rem;">Get detailed insights into our vision, market analysis, and growth strategy.</p>
-                <a href="mailto:nischaaayy@gmail.com?subject=Request%20for%20Cosmodrop%20Investor%20Deck&body=Hi%2C%0A%0AI'm%20interested%20in%20learning%20more%20about%20Cosmodrop.%20Please%20share%20your%20investor%20deck.%0A%0AName%3A%20%0AOrganization%3A%20%0AEmail%3A%20%0APhone%3A%20" style="display: inline-block; padding: 12px 30px; border: 2px solid white; color: white; text-decoration: none; text-transform: uppercase; letter-spacing: 1px; transition: all 0.3s ease;">Request Deck</a>
-            </div>
-
-            <!-- Partner Waitlist -->
-            <div style="border: 1px solid rgba(255,255,255,0.2); padding: 2rem; text-align: center; transition: all 0.3s ease;">
-                <div style="font-size: 2.5rem; margin-bottom: 1rem;">🤝</div>
-                <h3 style="margin-bottom: 1rem; font-weight: 300;">B2B Partnership</h3>
-                <p style="opacity: 0.8; margin-bottom: 2rem;">Join our early access program for delivery platforms and logistics partners.</p>
-                <a href="https://forms.gle/your-form-id" target="_blank" style="display: inline-block; padding: 12px 30px; border: 2px solid white; color: white; text-decoration: none; text-transform: uppercase; letter-spacing: 1px; transition: all 0.3s ease;">Join Waitlist</a>
             </div>
         </div>
     </section>
